web-infras/parser/tests/fixtures/babel/es2020/optional-chaining/optional-super-property-class/output.txt
[SyntaxError]: super() is only valid in derived class constructors (3,16)
3|        return super?.b;
 |              ^
[SyntaxError]: 'super' can only be used with function calls (i.e. super()) or in property accesses (i.e. super.prop or super[prop]. (3,21)
3|        return super?.b;
 |                   ^
